# EDMD_package

./: README.md  pyproject.toml
EDMD_package/: EDMD_config.json  __main__.py  create_tables.py  fit_dihedrals.py  format_scores_csrosetta.py  save_dihedrals.py  visualize_dihedrals.py  visualize_pef.py
ebmd_package/: LICENSE  requirements.txt
ebmd_package/ebmd_package/: create_tables.py  format_scores_csrosetta.py  main.py  pyproject.toml
edmd_package/: README.md
edmd_package/edmd_package/: pyproject.toml
loco_hd/: compare_fbp-fmn_pdb.py  plot.py
locohd/: all_atom_fmn.config.json  compare_fbp-fmn_xtc.py  plot.py  trajectory_analyzer.py
